# orchestrator

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  RISK.md  flake.nix
src/: bead.rs  command_line.rs  dispatch.rs  error.rs  event.rs  gc.rs  identifiers.rs  lib.rs  main.rs  orchestrator.rs  state.rs
tests/: dispatch.rs  events.rs  integration_cascade.rs  metadata.rs  state.rs
tests/fixtures/: deterministic-city.toml  real-bead-show.json
tests/scripts/: orchestrator-isolated-gc-test.sh  orchestrator-live-gc-test.sh
